# minesolver

./: LICENSE  Minesweeper.hs  README.md  minesolver.cabal  plan.org  stack.yaml
data/: logo.txt
src/: Main.hs
src/Data/: MSBoard.hs  UI.hs
src/Data/MSBoard/: Classes.hs  Expert.hs  IO.hs  SimpleBoard.hs  State.hs  Types.hs
