name:                minesolver
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/minesolver#readme
license:             BSD3
license-file:        LICENSE
author:              Ben Selfridge
maintainer:          example@example.com
copyright:           2017 Ben Selfridge
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable minesolver
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded
  other-modules:       Data.MSBoard.Classes,
                       Data.MSBoard.IO,
                       Data.MSBoard.SimpleBoard
                       Data.MSBoard.State
  default-language:    Haskell2010
  build-depends:       array,
                       base >= 4.7 && < 5,
                       brick >= 0.30,
                       containers,
                       microlens,
                       microlens-th,
                       microlens-platform,
                       mtl,
                       random,
                       transformers,
                       vty
